@@ -1,4 +1,6 @@
 <?php
+// Works well with ImageProcessor
+
 function X_simpleImageUpload($name, $src, $defaultValue, $imageprocessor, $autoSubmit = false) {?>
 <div ondrop="dropUploadFile(event, this.querySelector('input[type=file]'));">
     <img src="<?=$src? $src.$imageprocessor : $defaultValue?>"><br>
